changed readme added routes and fixed overlapping css and js issue

--- a/app/assets/stylesheets/under_construction_count_down.css
+++ b/app/assets/stylesheets/under_construction_count_down.css
@@ -1,15 +1,8 @@
 /* ==== Google font ==== */
 @import url('http://fonts.googleapis.com/css?family=Lato:400,300,700,900');
 
-body {
+.underConstructionBody {
   background: #394864;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    color: #555;
-    line-height: 1.6em;
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,13 +40,6 @@ a {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-a:hover,
-a:focus {
-    color: #4F92AF;
-    text-decoration: none;
-    outline: 0;
-}
-
 a:before,
 a:after {
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -61,61 +47,6 @@ a:after {
     -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
     -o-transition: color 0.1s ease-in, background 0.1s ease-in;
     transition: color 0.1s ease-in, background 0.1s ease-in;
-}
-
-.alignleft {
-    text-align: left;
-}
-.alignright {
-    text-align: right;
-}
-
-.aligncenter {
-    text-align: center;
-}
-
-.btn {
-  display: inline-block;
-  padding: 10px 20px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.428571429;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-       -o-user-select: none;
-          user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 0;
-}
-
-.btn-theme  {
-  color: #fff;
-  background-color: #4F92AF;
-  border-color: #4F92AF;
-}
-.btn-theme:hover  {
-  color: #fff;
-  background-color: #444;
-  border-color: #444;
-}
-form.signup input  {
-  height: 42px;
-  width: 200px;
-  border-radius: 0;
-  border: none;
-}
-form.signup button.btn {
-  font-weight: 700;
-}
-form.signup input.form-control:focus {
-  border-color: #fd680e;
 }
 
 
